Fix according PR comments