@@ -1,97 +1,77 @@
 package com.example.demo.serviceChargeComponent.domain.services;
 
-import com.example.demo.serviceChargeComponent.helper.mapper.ServiceChargeMapper;
-import com.example.demo.helper.mapper.base.Mapper;
 import com.example.demo.serviceChargeComponent.api.dtos.GetServiceChargesDTO;
+import com.example.demo.serviceChargeComponent.api.dtos.PostServiceChargeDTO;
 import com.example.demo.serviceChargeComponent.api.dtos.PutServiceChargeDTO;
-import com.example.demo.serviceChargeComponent.api.dtos.ResponseServiceChargeDTO;
 import com.example.demo.serviceChargeComponent.api.dtos.ServiceChargeHelperDTOs.ServiceChargeDTO;
 import com.example.demo.serviceChargeComponent.domain.entities.ServiceCharge;
-import com.example.demo.serviceChargeComponent.repository.AppliedServiceChargeRepository;
+import com.example.demo.serviceChargeComponent.helper.mapper.ServiceChargeMapper;
 import com.example.demo.serviceChargeComponent.repository.ServiceChargeRepository;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+
+import org.springframework.data.domain.Pageable;
+import jakarta.persistence.EntityNotFoundException;
+import lombok.AllArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
-import com.example.demo.serviceChargeComponent.api.dtos.PostServiceChargeDTO;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
+@AllArgsConstructor
 public class ServiceChargeService {
 
-    private static final Logger logger = LoggerFactory.getLogger(ServiceChargeService.class);
-
     private final ServiceChargeRepository serviceChargeRepository;
-    private final AppliedServiceChargeRepository appliedServiceChargeRepository;
+    private final ServiceChargeMapper serviceChargeMapper;
 
-    public ServiceChargeService(
-            ServiceChargeRepository serviceChargeRepository,
-            AppliedServiceChargeRepository appliedServiceChargeRepository
-    ) {
-        this.serviceChargeRepository = serviceChargeRepository;
-        this.appliedServiceChargeRepository = appliedServiceChargeRepository;
+    public ServiceChargeDTO createServiceCharge(PostServiceChargeDTO postServiceChargeDTO) {
+        ServiceCharge serviceCharge = serviceChargeMapper.toServiceCharge(postServiceChargeDTO);
+        ServiceCharge savedServiceCharge = serviceChargeRepository.save(serviceCharge);
+        return serviceChargeMapper.toServiceChargeDTO(savedServiceCharge);
     }
 
-    @Transactional
-    public ServiceChargeDTO createServiceCharge(PostServiceChargeDTO postServiceChargeDTO){
-        return Mapper.mapToDTO(
-                serviceChargeRepository.save(
-                        Mapper.mapToModel(
-                                postServiceChargeDTO,
-                                ServiceChargeMapper.TO_MODEL
-                        )
-                ),
-                ServiceChargeMapper.TO_DTO
-        );
-    }
+    public GetServiceChargesDTO getServiceCharges(int page, int size) {
+        Pageable pageable = PageRequest.of(page, size);
+        List<ServiceCharge> serviceChargeEntities = serviceChargeRepository.findAll(pageable).getContent();
 
-    public GetServiceChargesDTO getServiceCharges(){
-        List<ServiceChargeDTO> serviceCharges = serviceChargeRepository.findAll().stream()
-                .map(ServiceChargeMapper.TO_DTO::map)
-                .toList();
-
-        return new GetServiceChargesDTO(serviceCharges, serviceCharges.size());
-    }
-
-    public GetServiceChargesDTO getServiceCharges(int page, int size){
-        List<ServiceChargeDTO> serviceCharges = serviceChargeRepository.findAll(PageRequest.of(page, size)).stream()
-                .map(ServiceChargeMapper.TO_DTO::map)
-                .toList();
+        List<ServiceChargeDTO> serviceChargeDTOs = serviceChargeEntities.stream()
+                .map(serviceChargeMapper::toServiceChargeDTO)
+                .collect(Collectors.toList());
 
         return new GetServiceChargesDTO(
-                serviceCharges.size(),
-                size,
-                page,
-                serviceCharges
+                serviceChargeDTOs.size(),  
+                size,                     
+                page,                    
+                serviceChargeDTOs         
         );
     }
 
     @Transactional
-    public ResponseServiceChargeDTO updateServiceCharge(PutServiceChargeDTO patchServiceChargeDTO, UUID id) {
+    public ServiceChargeDTO updateServiceCharge(PutServiceChargeDTO putServiceChargeDTO, UUID id) {
         ServiceCharge serviceCharge = serviceChargeRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("ServiceCharge with id " + id + " not found"));
-
-        applyServiceChargeUpdates(patchServiceChargeDTO, serviceCharge);
-
+                .orElseThrow(() -> new EntityNotFoundException("ServiceCharge with id " + id + " not found"));
+        applyServiceChargeUpdates(putServiceChargeDTO, serviceCharge); 
         ServiceCharge updatedServiceCharge = serviceChargeRepository.save(serviceCharge);
-        return new ResponseServiceChargeDTO(Mapper.mapToDTO(updatedServiceCharge, ServiceChargeMapper.TO_DTO));
+        
+        return serviceChargeMapper.toServiceChargeDTO(updatedServiceCharge);
     }
+
 
     public void deleteServiceCharge(UUID id) {
-        if (!serviceChargeRepository.existsById(id)) {
-            logger.error("ServiceCharge with id {} not found", id);
-            throw new IllegalArgumentException("ServiceCharge with id " + id + " not found");
+        if (serviceChargeRepository.existsById(id)) {
+            serviceChargeRepository.deleteById(id);
+        }else{
+            throw new EntityNotFoundException("ServiceCharge with id " + id + " not found");
         }
-        serviceChargeRepository.deleteById(id);
     }
 
-    private void applyServiceChargeUpdates(PutServiceChargeDTO patchServiceChargeDTO, ServiceCharge serviceCharge) {
-        patchServiceChargeDTO.getTitle().ifPresent(serviceCharge::setTitle);
-        patchServiceChargeDTO.getServiceChargeValue().ifPresent(serviceCharge::setServiceChargeValue);
-        patchServiceChargeDTO.getValueType().ifPresent(serviceCharge::setValueType);
-        patchServiceChargeDTO.getCurrency().ifPresent(serviceCharge::setCurrency);
+    private void applyServiceChargeUpdates(PutServiceChargeDTO putServiceChargeDTO, ServiceCharge serviceCharge) {
+        putServiceChargeDTO.getTitle().ifPresent(serviceCharge::setTitle);
+        putServiceChargeDTO.getServiceChargeValue().ifPresent(serviceCharge::setServiceChargeValue);
+        putServiceChargeDTO.getValueType().ifPresent(serviceCharge::setValueType);
+        putServiceChargeDTO.getCurrency().ifPresent(serviceCharge::setCurrency);
     }
 }
+
